# signalscope

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
docker/: api.Dockerfile  web.Dockerfile
docs/: API_EXAMPLES.md  ARCHITECTURE.md  DEMO_SCRIPT.md  EVALUATION.md  PORTFOLIO_CASE_STUDY.md  REFERENCE_RESULTS.md  SECURITY.md
docs/ADRs/: 0001-governed-workflow-over-autonomous-agent.md
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
src/signalscope/: __init__.py
src/signalscope/agents/: __init__.py  state.py  workflow.py
src/signalscope/api/: container.py  dependencies.py  main.py
src/signalscope/api/routes/: approvals.py  assets.py  campaigns.py  evaluations.py  health.py
src/signalscope/application/: __init__.py  approval_store.py  brief_parser.py  explainability.py  quality_gate.py  ranking.py  workflow_store.py
src/signalscope/core/: config.py  logging.py
src/signalscope/domain/: __init__.py  enums.py  models.py
src/signalscope/evaluation/: __init__.py  metrics.py  runner.py
src/signalscope/infrastructure/: __init__.py  catalog_repository.py  hybrid_retriever.py  llm_client.py  policy_engine.py  text.py  tracing.py
src/signalscope/mcp/: __init__.py  media_catalog_server.py  policy_server.py
tests/: conftest.py  test_brief_parser.py  test_evaluation_metrics.py  test_evaluation_runner.py  test_policy_engine.py  test_retrieval.py  test_workflow.py
