[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "signalscope"
version = "0.1.0"
description = "Explainable multimodal media intelligence copilot with governed agent workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SignalScope Contributors" }]
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
  "pydantic>=2.10,<3.0",
  "pydantic-settings>=2.7,<3.0",
  "langgraph>=0.3,<1.0",
  "mcp>=1.6,<2.0",
  "httpx>=0.28,<1.0",
  "python-json-logger>=3.2,<4.0",
  "opentelemetry-api>=1.30,<2.0",
  "opentelemetry-sdk>=1.30,<2.0",
  "opentelemetry-exporter-otlp-proto-http>=1.30,<2.0",
  "numpy>=2.0,<3.0",
  "tenacity>=9.0,<10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "ruff>=0.9,<1.0",
  "mypy>=1.14,<2.0",
  "types-requests>=2.32.0.20241016",
  "pre-commit>=4.1,<5.0",
]
providers = [
  "openai>=1.61,<2.0",
  "sentence-transformers>=3.4,<4.0",
  "qdrant-client>=1.13,<2.0",
  "psycopg[binary]>=3.2,<4.0",
]

[project.scripts]
signalscope-api = "signalscope.api.main:run"
signalscope-evaluate = "signalscope.evaluation.runner:main"
signalscope-media-mcp = "signalscope.mcp.media_catalog_server:main"
signalscope-policy-mcp = "signalscope.mcp.policy_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["signalscope"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
exclude = ["apps", "infra"]
